--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="#prices">Top 5 Crypto Live Prices</a>
           </li>
           <li id="nav-4" class="slide-out-4">
-            <a href="#projects">Exchanges</a>
+            <a href="#exchanges">Exchanges</a>
           </li>
           <li id="nav-5" class="slide-out-5"><a href="#contact">Contact</a></li>
         </ul>
