--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Gita Project</title>
     <link rel="icon" type="image/png" href="" />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <!-- Menu Overlay -->
@@ -37,8 +44,10 @@
     </section>
     <section id="about"><h1>Learn More About Me</h1></section>
     <section id="prices">
-      <h1>Top 5 Crypto Live Prices</h1>
-      <div class="coin-list">
+      <div id="section-name">
+        <h1>Top 5 Crypto Live Prices</h1>
+      </div>
+      <div id="coin-list" class="coin-list">
         <div class="coin">
           <img id="btc-img" alt="bitcoin" />
           <div>
@@ -120,7 +129,31 @@
         </div>
       </div>
     </section>
-    <section id="contact"><h1>Available Anytime</h1></section>
+    <section id="contact">
+      <h1>Available Anytime</h1>
+      <footer class="bottom-container">
+        <div class="footer-links">
+          <a href="https://twitter.com/ctBeka" target="_blank"
+            ><i class="fa-brands fa-twitter icon"></i
+          ></a>
+
+          <a
+            href="https://www.linkedin.com/in/beka-khorguashvili-85021a170/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin icon"></i
+          ></a>
+          <a href="https://github.com/khorGu" target="_blank"
+            ><i class="fa-brands fa-github-alt icon"></i
+          ></a>
+          <a
+            href="https://www.tiktok.com/@cryptokh31?is_from_webapp=1&sender_device=pc"
+            target="_blank"
+            ><i class="fa-brands fa-tiktok icon"></i
+          ></a>
+        </div>
+        <p>© Copyright 2022 Gita Project</p>
+      </footer>
+    </section>
     <!-- Script -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="script.js"></script>
