--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gita Project</title>
-    <link rel="icon" type="image/png" href="" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <link rel="stylesheet" href="style.css" />
     <link
       rel="stylesheet"
@@ -42,7 +42,15 @@
     <section id="home">
       <a href="" target="_blank">Bek Project</a>
     </section>
-    <section id="about"><h1>Learn More About Me</h1></section>
+    <section id="about">
+      <h1>Learn More About Me</h1>
+      <div class="about">
+        <h2>Hi People</h2>
+        <p class="intro">
+          Hello, I am a future blockchain developer and crypto enthusiast
+        </p>
+      </div>
+    </section>
     <section id="prices">
       <div id="section-name">
         <h1>Top 5 Crypto Live Prices</h1>
